chore(docs): fixed contrast ratio for light inline code styles

--- a/packages/documentation/src/pages/app.scss
+++ b/packages/documentation/src/pages/app.scss
@@ -4,7 +4,7 @@
 
 // sass-lint:disable no-duplicate-properties
 :root {
-  #{--code-color}: #{$rmd-pink-400};
+  #{--code-color}: #{$rmd-pink-600};
   #{--sass-bg}: #{$rmd-grey-200};
   #{--sass-border}: #{$rmd-grey-400};
 }
